--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,5 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "com.eclipsesource.minimal-json:minimal-json:0.9.4"
 }
